--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,4 +22,6 @@
     <button class="btn btn-danger">Logout</button>
   </div>
 </nav>
-<router-outlet></router-outlet>
+<div class="container">
+  <router-outlet></router-outlet>
+</div>
