--- a/src/app/app.html
+++ b/src/app/app.html
@@ -15,7 +15,7 @@
           <a class="nav-link" routerLink="/add">Add </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/list"> List </a>
+          <a class="nav-link" routerLink="/"> List </a>
         </li>
       </ul>
     </div>
