--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-dark bg-dark navbar-expand-lg">
   <div class="container">
-    <div class="collapse navbar-collapse" id="navbarNav">
+    <div id="navbarNav">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0 menu-list">
         <li class="nav-item">
           <a class="nav-link active">Thi WEB2081 Angular</a>
