--- a/src/app/update/update.html
+++ b/src/app/update/update.html
@@ -1,23 +1,83 @@
-<form>
+<form [formGroup]="form" (ngSubmit)="onSubmit()">
   <div class="mb-3">
-    <label for="exampleInputEmail1" class="form-label">Email address</label>
+    <label for="exampleInputEmail1" class="form-label">name</label>
     <input
-      type="email"
+      type="text"
       class="form-control"
       id="exampleInputEmail1"
       aria-describedby="emailHelp"
+      formControlName="name"
     />
-    <div id="emailHelp" class="form-text">
-      We'll never share your email with anyone else.
+  </div>
+  <div class="mb-3">
+    <label for="exampleInputEmail1" class="form-label">type</label>
+    <div class="form-check">
+      <input
+        class="form-check-input"
+        type="radio"
+        name="flexRadioDefault"
+        id="flexRadioDefault1"
+        formControlName="type"
+        value="upcoming"
+        checked
+      />
+      <label class="form-check-label" for="flexRadioDefault1">upcoming</label>
+    </div>
+    <div class="form-check">
+      <input
+        class="form-check-input"
+        type="radio"
+        name="flexRadioDefault"
+        id="flexRadioDefault2"
+        formControlName="type"
+        value="ongoing"
+      />
+      <label class="form-check-label" for="flexRadioDefault2"> ongoing </label>
+    </div>
+    <div class="form-check">
+      <input
+        class="form-check-input"
+        type="radio"
+        name="flexRadioDefault"
+        id="flexRadioDefault2"
+        formControlName="type"
+        value="ended"
+      />
+      <label class="form-check-label" for="flexRadioDefault2"> ended </label>
     </div>
   </div>
   <div class="mb-3">
-    <label for="exampleInputPassword1" class="form-label">Password</label>
-    <input type="password" class="form-control" id="exampleInputPassword1" />
+    <label for="exampleInputEmail1" class="form-label">note</label>
+    <input
+      type="text"
+      class="form-control"
+      id="exampleInputEmail1"
+      aria-describedby="emailHelp"
+      formControlName="note"
+    />
   </div>
-  <div class="mb-3 form-check">
-    <input type="checkbox" class="form-check-input" id="exampleCheck1" />
-    <label class="form-check-label" for="exampleCheck1">Check me out</label>
+  <div class="mb-3">
+    <label for="exampleInputEmail1" class="form-label">dateStart</label>
+    <input
+      type="date"
+      class="form-control"
+      id="exampleInputEmail1"
+      aria-describedby="emailHelp"
+      formControlName="dateStart"
+    />
+  </div>
+  <div class="mb-3">
+    <label for="exampleInputEmail1" class="form-label">category</label>
+    <select
+      class="form-select"
+      aria-label="Default select example"
+      formControlName="category"
+    >
+      <option selected>Open this select menu</option>
+      <option value="workshop">workshop</option>
+      <option value="seminar">seminar</option>
+      <option value="movie">movie</option>
+    </select>
   </div>
   <button type="submit" class="btn btn-primary">Submit</button>
 </form>
