--- a/src/app/update/update.html
+++ b/src/app/update/update.html
@@ -15,11 +15,10 @@
       <input
         class="form-check-input"
         type="radio"
-        name="flexRadioDefault"
+        name="type"
         id="flexRadioDefault1"
         formControlName="type"
         value="upcoming"
-        checked
       />
       <label class="form-check-label" for="flexRadioDefault1">upcoming</label>
     </div>
@@ -27,7 +26,7 @@
       <input
         class="form-check-input"
         type="radio"
-        name="flexRadioDefault"
+        name="type"
         id="flexRadioDefault2"
         formControlName="type"
         value="ongoing"
@@ -38,7 +37,7 @@
       <input
         class="form-check-input"
         type="radio"
-        name="flexRadioDefault"
+        name="type"
         id="flexRadioDefault2"
         formControlName="type"
         value="ended"
